// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewDataSourceRow check NewDataSourceRow 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-7"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="name"
          >
            New DataSource Name
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="name"
            name="name"
            type="text"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            1
          </div>
        </div>
      </div>
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA_HA"
            >
              OPCUA_HA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <br />
    <div
      class="col-md-2"
    >
      <button
        class="oi-add-button btn btn-primary btn-sm"
        type="button"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;

exports[`NewDataSourceRow check add press 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-7"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="name"
          >
            New DataSource Name
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="name"
            name="name"
            type="text"
            value="new_datasource"
          />
          <div
            class="invalid-feedback"
          >
            0
          </div>
        </div>
      </div>
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA_HA"
            >
              OPCUA_HA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <br />
    <div
      class="col-md-2"
    >
      <button
        class="oi-add-button btn btn-primary btn-sm"
        type="button"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;

exports[`NewDataSourceRow check add pressed with empty dataSource name 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-7"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="name"
          >
            New DataSource Name
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="name"
            name="name"
            type="text"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            1
          </div>
        </div>
      </div>
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA_HA"
            >
              OPCUA_HA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <br />
    <div
      class="col-md-2"
    >
      <button
        class="oi-add-button btn btn-primary btn-sm"
        type="button"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;

exports[`NewDataSourceRow check change dataSource name 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-7"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="name"
          >
            New DataSource Name
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="name"
            name="name"
            type="text"
            value=""
          />
          <div
            class="invalid-feedback"
          >
            1
          </div>
        </div>
      </div>
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA_HA"
            >
              OPCUA_HA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <br />
    <div
      class="col-md-2"
    >
      <button
        class="oi-add-button btn btn-primary btn-sm"
        type="button"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;

exports[`NewDataSourceRow check change protocol 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="row"
    >
      <div
        class="col-md-7"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="name"
          >
            New DataSource Name
          </label>
          <input
            aria-invalid="true"
            class="oi-form-input is-invalid form-control"
            id="name"
            name="name"
            type="text"
            value="new_datasource"
          />
          <div
            class="invalid-feedback"
          >
            1
          </div>
        </div>
      </div>
      <div
        class="col-md-5"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="protocol"
          >
            Protocol
          </label>
          <select
            aria-invalid="false"
            class="oi-form-input form-control"
            id="protocol"
            name="protocol"
          >
            <option
              value="CSV"
            >
              CSV
            </option>
            <option
              value="OPCHDA"
            >
              OPCHDA
            </option>
            <option
              value="SQLDbToFile"
            >
              SQLDbToFile
            </option>
            <option
              value="FolderScanner"
            >
              FolderScanner
            </option>
            <option
              value="Modbus"
            >
              Modbus
            </option>
            <option
              value="OPCUA_HA"
            >
              OPCUA_HA
            </option>
            <option
              value="MQTT"
            >
              MQTT
            </option>
          </select>
          <div
            class="invalid-feedback"
          />
        </div>
      </div>
    </div>
    <br />
    <div
      class="col-md-2"
    >
      <button
        class="oi-add-button btn btn-primary btn-sm"
        type="button"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;
